добавил бегущую строку

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,21 @@
 
   <header class="header">
     <div class="header__container_text">
-      <h1 class="header__text">ПРЕВРАТИТЕ УЕЗДНЫЙ ГОРОД В СТОЛИЦУ ЗЕМНОГО ШАРА</h1>
-      <p class="header__signature">Оплатите взнос на телеграммы для организации Международного васюкинского турнира
-        по шахматам</p>
+      <h1 class="header__text">
+        ПРЕВРАТИТЕ
+        УЕЗДНЫЙ ГОРОД
+      </h1>
+      <h1 class="header__text">
+        В СТОЛИЦУ ЗЕМНОГО ШАРА
+      </h1>
+      <p class="header__signature">Оплатите взнос
+        на телеграммы для организации Международного
+        васюкинского турнира
+        по шахматам
+      </p>
       <div class="button__container">
         <button class="button__support">Поддержать шахматную мысль</button>
-        <button class="button__support">Подробнее о турнире</button>
+        <button class="button__support">Подробнее о турнире</button>
       </div>
     </div>
     <img class="header__logo" src="<%=require('../images/logo.png')%>">
@@ -28,6 +37,11 @@
     <div class="vector__chess"></div>
     <div class="header__container"></div>
   </header>
+  <main class="page__container">
+    <section class="running__line">
+      <div class="running__line__incont">&nbsp;Дело помощи утопающим — дело рук самих утопающих! · Шахматы двигают вперед не только культуру, но и экономику! · Лед тронулся, господа присяжные заседатели! · </div>
+    </section>
+  </main>
 </body>
 
 </html>
