Сделана шапка и начат первый блок

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 <body class="page">
 
   <header class="header">
+
     <div class="header__container_text">
       <h1 class="header__text">
         ПРЕВРАТИТЕ
@@ -32,16 +33,68 @@
         <button class="button__support">Подробнее о турнире</button>
       </div>
     </div>
-    <img class="header__logo" src="<%=require('../images/logo.png')%>">
-    <div class="chess"></div>
-    <div class="vector__chess"></div>
+    <img class="header__container" src="<%=require('../images/image23.png')%>">
     <div class="header__container"></div>
+    <img class="header__logo" src="<%=require('../images/logo.png')%>">
+    <img class="chess" src="<%=require('../images/city.png')%>">
+    <img class="vector__chess" src="<%=require('../images/Vector3.png')%>">
+    <img class="circle__container" src="<%=require('../images/Ellipse6.png')%>">
+    <img class="words__onCircle rotation" src="<%=require('../images/Group.png')%>">
+    <img class="figure__first" src="<%=require('../images/Maskgroup(1).png')%>">
+    <img class="figure__second" src="<%=require('../images/Maskgroup(2).png')%>">
+    <img class="figure__thrid" src="<%=require('../images/Maskgroup.png')%>">
+    <img class="figure__fourth" src="<%=require('../images/chess.png')%>">
+    </div>
+
   </header>
+
   <main class="page__container">
+
     <section class="running__line">
-      <div class="running__line__incont">&nbsp;Дело помощи утопающим — дело рук самих утопающих! · Шахматы двигают вперед не только культуру, но и экономику! · Лед тронулся, господа присяжные заседатели! · </div>
+      <div class="running__line__incont">&nbsp;Дело помощи утопающим — дело рук самих утопающих! · Шахматы двигают
+        вперед не только культуру, но и экономику! · Лед тронулся, господа присяжные заседатели! · </div>
     </section>
+
+    <section class="poster">
+      <div class="posterHeader__container">
+        <div class="posterText__container">
+          <h1 class="poster__header">
+            Чтобы поддержать Международный васюкинский
+            турнир посетите лекцию на тему:
+          </h1>
+          <h1 class="poster__header">«Плодотворная дебютная идея»</h1>
+        </div>
+        <img class="poster__Players" src="<%=require('../images/Frame48095655.png')%>">
+      </div>
+      <div class="poster__container">
+        <img class="poster__image" src="<%=require('../images/Frame_48095654.png')%>">
+        <div class="poster__posterContainer">
+          <h2 class="poster__text">и Сеанс
+            <h2>одновременной игры в шахматы на 160 досках</h2>
+            <h2>гроссмейстера О. Бендера</h2>
+          </h2>
+          <div class="poster__table">
+            <ul class="poster__tablePunkts">
+              <li class="poster__tablePunktsText">Место проведения:</li>
+              <li class="poster__tablePunktsText">Дата и время мероприятия:</li>
+              <li class="poster__tablePunktsText">Стоимость входных билетов:</li>
+              <li class="poster__tablePunktsText">Плата за игру:</li>
+              <li class="poster__tablePunktsText">Взнос на телеграммы:</li>
+            </ul>
+            <ul class="poster__tablePunktsAnswers">
+              <li class="poster__tablePunktsText">Клуб «Картонажник»</li>
+              <li class="poster__tablePunktsText">22 июня 1927 г. в 18:00</li>
+              <li class="poster__tablePunktsText">20 коп.</li>
+              <li class="poster__tablePunktsText">50 коп.</li>
+              <li class="poster__tablePunktsText">100 руб. 21 руб. 16 коп.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
+
 </body>
 
 </html>
