--- a/src/index.html
+++ b/src/index.html
@@ -69,9 +69,8 @@
       <div class="poster__container">
         <img class="poster__image" src="<%=require('../images/Frame_48095654.png')%>">
         <div class="poster__posterContainer">
-          <h2 class="poster__text">и Сеанс
-            <h2>одновременной игры в шахматы на 160 досках</h2>
-            <h2>гроссмейстера О. Бендера</h2>
+          <h2 class="poster__text">и Сеанс<h2 class="poster__text"> одновременной игры в шахматы на 160 досках</h2>
+            <h2 class="poster__text"> гроссмейстера О. Бендера</h2>
           </h2>
           <div class="poster__table">
             <ul class="poster__tablePunkts">
@@ -82,13 +81,55 @@
               <li class="poster__tablePunktsText">Взнос на телеграммы:</li>
             </ul>
             <ul class="poster__tablePunktsAnswers">
-              <li class="poster__tablePunktsText">Клуб «Картонажник»</li>
-              <li class="poster__tablePunktsText">22 июня 1927 г. в 18:00</li>
-              <li class="poster__tablePunktsText">20 коп.</li>
-              <li class="poster__tablePunktsText">50 коп.</li>
-              <li class="poster__tablePunktsText">100 руб. 21 руб. 16 коп.</li>
+              <li class="poster__tablePunktsTextAnswers">Клуб «Картонажник»</li>
+              <li class="poster__tablePunktsTextAnswers">22 июня 1927. в 18:00</li>
+              <li class="poster__tablePunktsTextAnswers">20 коп.</li>
+              <li class="poster__tablePunktsTextAnswers">50 коп.</li>
+              <li class="poster__tablePunktsTextAnswers">100 руб. 21 руб. 16 коп.</li>
             </ul>
           </div>
+          <a href="/" class="poster__link">По всем вопросам обращаться в администрацию к К. Михельсону</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="stages">
+      <h1 class="stages__header"> Этапы преображения васюков <a href="/" class="stages__link">Будущие источники обогащения васюкинцев</a></h1>
+      <div class="stages__containerGrid">
+        <div class="stage">
+          <img class="stage__image" src="<%=require('../images/image23.png')%>">
+          <p class="stage__number">1</p>
+          <p class="stage__description">Строительство железнодорожной магистрали Москва-Васюки</p>
+        </div>
+        <div class="stage">
+          <img class="stage__image" src="<%=require('../images/image23.png')%>">
+          <p class="stage__number">2</p>
+          <p class="stage__description">Открытие фешенебельной гостиницы «Проходная пешка» и других небоскрёбов</p>
+        </div>
+        <div class="stage">
+          <img class="stage__image" src="<%=require('../images/image23.png')%>">
+          <p class="stage__number">3</p>
+          <p class="stage__description">Поднятие сельского хозяйства в радиусе на тысячу километров: производство овощей, фруктов, икры, шоколадных конфет</p>
+        </div>
+        <div class="stage">
+          <img class="stage__image" src="<%=require('../images/image23.png')%>">
+          <p class="stage__number">4</p>
+          <p class="stage__description">Строительство дворца для турнира</p>
+        </div>
+        <div class="stage">
+          <img class="stage__image" src="<%=require('../images/image23.png')%>">
+          <p class="stage__number">5</p>
+          <p class="stage__description">Размещение гаражей для гостевого автотранспорта</p>
+        </div>
+        <div class="stage">
+          <img class="stage__image" src="<%=require('../images/image23.png')%>">
+          <p class="stage__number">6</p>
+          <p class="stage__description">Постройка сверхмощной радиостанции для передачи всему миру сенсационных результатов</p>
+        </div>
+        <div class="stage">
+          <img class="stage__image" src="<%=require('../images/image23.png')%>">
+          <p class="stage__number">7</p>
+          <p class="stage__description">Создание аэропорта «Большие Васюки» с регулярным отправлением почтовых самолётов и дирижаблей во все концы света, включая Лос-Анжелос и Мельбурн</p>
         </div>
       </div>
     </section>
