добавлен адаптив для больших разрешений

--- a/src/index.html
+++ b/src/index.html
@@ -162,26 +162,25 @@
           <p class="description__player">Чемпион мира по шахматам</p>
           <button class="moreInfo">Подробнее</button>
         </div>
-        <div class="player__container">
+        <div class="player__container" id="cardwindow">
           <img class="player__photo" src="../images/Player.png">
           <p class="name__player">Александр Алехин</p>
           <p class="description__player">Чемпион мира по шахматам</p>
           <button class="moreInfo">Подробнее</button>
         </div>
-  
-        <div class="player__container">
+        <div class="player__container hide-slide">
           <img class="player__photo" src="../images/Player.png">
           <p class="name__player">Арон Нимцович</p>
           <p class="description__player">Чемпион мира по шахматам</p>
           <button class="moreInfo">Подробнее</button>
         </div>
-        <div class="player__container">
+        <div class="player__container hide-slide">
           <img class="player__photo" src="../images/Player.png">
           <p class="name__player">Рехард Рети</p>
           <p class="description__player">Чемпион мира по шахматам</p>
           <button class="moreInfo">Подробнее</button>
         </div>
-        <div class="player__container">
+        <div class="player__container hide-slide">
           <img class="player__photo" src="../images/Player.png">
           <p class="name__player">Остап Бендер</p>
           <p class="description__player">Гроссмейстер</p>
