добавлен адаптив для телефона

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
         по шахматам
       </p>
       <div class="button__container">
-        <button class="button__support">Поддержать<br>шахматную мысль</button>
-        <button class="button__support">Подробнее<br>о турнире</button>
+        <button class="button__support">Поддержать шахматную мысль</button>
+        <button class="button__support">Подробнее о турнире</button>
       </div>
     </div>
     <img class="header__container" src="../images/image23.png">
@@ -63,8 +63,14 @@
             турнир посетите лекцию на тему:
           </h1>
           <h1 class="poster__header">«Плодотворная дебютная идея»</h1>
+          <h1 class="poster__header2">
+            Чтобы поддержать Международный васюкинский
+            турнир
+          </h1>
         </div>
         <img class="poster__Players" src="../images/Frame48095655.png">
+        <h1 class="poster__header2">посетите лекцию на тему: </h1>
+        <h1 class="poster__header1">«Плодотворная дебютная идея»</h1>
       </div>
       <div class="poster__container">
         <img class="poster__image" src="../images/Frame_48095654.png">
@@ -85,7 +91,21 @@
               <li class="poster__tablePunktsTextAnswers">22 июня 1927. в 18:00</li>
               <li class="poster__tablePunktsTextAnswers">20 коп.</li>
               <li class="poster__tablePunktsTextAnswers">50 коп.</li>
-              <li class="poster__tablePunktsTextAnswers">100 руб. 21 руб. 16 коп.</li>
+              <li class="poster__tablePunktsTextAnswers"><del>100 руб.</del> 21 руб. 16 коп.</li>
+            </ul>
+          </div>
+
+          <div class="poster__table375">
+            <ul class="poster__tablePunkts375">
+              <li class="poster__tablePunktsText375">Место проведения:</li>
+              <li class="poster__tablePunktsTextAnswers375">Клуб «Картонажник»</li>
+              <li class="poster__tablePunktsText375">Дата и время мероприятия:</li>
+              <li class="poster__tablePunktsTextAnswers375">22 июня 1927. в 18:00</li>
+              <li class="poster__tablePunktsText375">Плата за игру: </li> <p class="answer">20 коп.</p>
+              <li class="poster__tablePunktsText375">Стоимость входных билетов:</li>
+              <li class="poster__tablePunktsTextAnswers375">50 коп.</li>
+              <li class="poster__tablePunktsText375">Взнос на телеграммы:</li>
+              <li class="poster__tablePunktsTextAnswers375"><del>100 руб.</del> 21 руб. 16 коп.</li>
             </ul>
           </div>
           <a href="/" class="poster__link">По всем вопросам обращаться в администрацию к К. Михельсону</a>
