--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,8 @@
               <li class="poster__tablePunktsTextAnswers375">Клуб «Картонажник»</li>
               <li class="poster__tablePunktsText375">Дата и время мероприятия:</li>
               <li class="poster__tablePunktsTextAnswers375">22 июня 1927. в 18:00</li>
-              <li class="poster__tablePunktsText375">Плата за игру: </li> <p class="answer">20 коп.</p>
+              <li class="poster__tablePunktsText375">Плата за игру: </li>
+              <p class="answer">20 коп.</p>
               <li class="poster__tablePunktsText375">Стоимость входных билетов:</li>
               <li class="poster__tablePunktsTextAnswers375">50 коп.</li>
               <li class="poster__tablePunktsText375">Взнос на телеграммы:</li>
@@ -157,6 +158,66 @@
           <img class="stage__plane" src="../images/plane.png">
         </div>
       </div>
+
+      <img class="stage__plane375" src="../images/plane.png">
+      <div class="stages__container375">
+        <div class="stage375">
+          <img class="stage__image375" src="../images/image23.png">
+          <div class="stage__column">
+            <div class="stage__column_discr">
+              <p class="stage__number375">1</p>
+              <p class="stage__description375">Строительство железнодорожной магистрали Москва-Васюки</p>
+            </div>
+            <div class="stage__column_discr">
+              <p class="stage__number375">2</p>
+              <p class="stage__description375">Открытие фешенебельной гостиницы «Проходная пешка» и других небоскрёбов
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="stage375">
+          <img class="stage__image375" src="../images/image23.png">
+          <p class="stage__number375">3</p>
+          <p class="stage__description375">Поднятие сельского хозяйства в радиусе на тысячу километров: производство
+            овощей, фруктов, икры, шоколадных конфет</p>
+        </div>
+        <div class="stage375">
+          <img class="stage__image375" src="../images/image23.png">
+          <div class="stage__column">
+            <div class="stage__column_discr">
+              <p class="stage__number375">4</p>
+              <p class="stage__description375">Строительство дворца для турнира</p>
+            </div>
+            <div class="stage__column_discr">
+              <p class="stage__number375">5</p>
+              <p class="stage__description375">Размещение гаражей для гостевого автотранспорта</p>
+            </div>
+          </div>
+        </div>
+        <div class="stage375">
+          <img class="stage__image375" src="../images/image23.png">
+          <p class="stage__number375">6</p>
+          <p class="stage__description375">Постройка сверхмощной радиостанции для передачи всему миру сенсационных
+            результатов</p>
+        </div>
+        <div class="stage375">
+          <img class="stage__image375" src="../images/image23.png">
+          <p class="stage__number375">7</p>
+          <p class="stage__description375">Создание аэропорта «Большие Васюки» с регулярным отправлением почтовых
+            самолётов и дирижаблей во все концы света, включая Лос-Анжелос и Мельбурн</p>
+        </div>
+      </div>
+      <div class="switch375">
+        <button class="arrow375" id="prevBtn375"><img class="arrowSide375" src="../images/arrowLeft.png"></button>
+        <div class="dots">
+          <span class="dot"></span>
+          <span class="dot dot__gray"></span>
+          <span class="dot dot__gray"></span>
+          <span class="dot dot__gray"></span>
+          <span class="dot dot__gray"></span>
+        </div>
+        <button class="arrow375" id="nextBtn375"><img class="arrowSide375" src="../images/arrowRight.png"></button>
+      </div>
     </section>
 
     <section class="players">
@@ -170,7 +231,7 @@
         </div>
       </div>
       <div class="players_container_all" id="slider">
-        <div class="player__container" >
+        <div class="player__container">
           <img class="player__photo" src="../images/Player.png">
           <p class="name__player">Хозе-Рауль Капабланка</p>
           <p class="description__player">Чемпион мира по шахматам</p>
@@ -207,6 +268,54 @@
           <button class="moreInfo">Подробнее</button>
         </div>
       </div>
+
+        <h1 class="header__players375">участники турнира</h1>
+
+      <div class="players_container_all375" id="slider375">
+        <div class="player__container375">
+          <img class="player__photo" src="../images/Player.png">
+          <p class="name__player">Хозе-Рауль Капабланка</p>
+          <p class="description__player">Чемпион мира по шахматам</p>
+          <button class="moreInfo">Подробнее</button>
+        </div>
+        <div class="player__container375 hide-slide375">
+          <img class="player__photo" src="../images/Player.png">
+          <p class="name__player">Эммануил Ласкер</p>
+          <p class="description__player">Чемпион мира по шахматам</p>
+          <button class="moreInfo">Подробнее</button>
+        </div>
+        <div class="player__container375 hide-slide375" id="cardwindow">
+          <img class="player__photo" src="../images/Player.png">
+          <p class="name__player">Александр Алехин</p>
+          <p class="description__player">Чемпион мира по шахматам</p>
+          <button class="moreInfo">Подробнее</button>
+        </div>
+        <div class="player__container375 hide-slide375">
+          <img class="player__photo" src="../images/Player.png">
+          <p class="name__player">Арон Нимцович</p>
+          <p class="description__player">Чемпион мира по шахматам</p>
+          <button class="moreInfo">Подробнее</button>
+        </div>
+        <div class="player__container375 hide-slide375">
+          <img class="player__photo" src="../images/Player.png">
+          <p class="name__player">Рехард Рети</p>
+          <p class="description__player">Чемпион мира по шахматам</p>
+          <button class="moreInfo">Подробнее</button>
+        </div>
+        <div class="player__container375 hide-slide375">
+          <img class="player__photo" src="../images/Player.png">
+          <p class="name__player">Остап Бендер</p>
+          <p class="description__player">Гроссмейстер</p>
+          <button class="moreInfo">Подробнее</button>
+        </div>
+
+        <div class="switch__container375">
+          <button class="arrow" id="prevBtn375P"><img class="arrowSide" src="../images/arrowLeft.png"></button>
+          <p class="players__count375">1</p>
+          <p class="players__count375"> / 6</p>
+          <button class="arrow" id="nextBtn375P"><img class="arrowSide" src="../images/arrowRight.png"></button>
+        </div>
+      </div>
     </section>
 
     <section class="running__line">
@@ -217,7 +326,8 @@
   </main>
 
   <footer class="footer">
-    <p class="footer__faq">Все персонажи, события и цитаты являются вымышленными и не принадлежат создателям сайта. С подробностями можно познакомиться в главе XXXIV романа Ильи Ильфа и Евгения Петрова «Двенадцать стульев».</p>
+    <p class="footer__faq">Все персонажи, события и цитаты являются вымышленными и не принадлежат создателям сайта.
+      С подробностями можно познакомиться в главе XXXIV романа Ильи Ильфа и Евгения Петрова «Двенадцать стульев».</p>
   </footer>
 
 </body>
